# background-job-based-notication-system

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATIONS.md  API_DOCUMENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  render.yaml
apps/accounts/: serializers.py  tests.py  urls.py  views.py
apps/common/: constants.py  logging_filters.py  middleware.py  request_context.py  tests.py  urls.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_notificationattempt.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
